Made a tile class and preparation for pieces to populate when BoardProp is finished
Co-authored-by: Jason Lee <yjason12@users.noreply.github.com>

--- a/src/components/Game/Board.css
+++ b/src/components/Game/Board.css
@@ -8,30 +8,7 @@
     align-items: center;
     width: 500px;
     height: 696px;
-    background-color: #f5c276;
-}
-
-#board .tile {
-    width: 50px;
-    height: 28px;
     outline-style: solid;
-    outline-color: #ff0000;
-
+    outline-color:black;
 }
 
-#board .campsite {
-    place-content: center;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    outline-style: solid;
-    outline-color: #ff0000;
-}
-
-#board .hq {
-    width: 50px;
-    height: 28px;
-    outline-style: solid;
-    outline-color: #ff0000;
-    background-color: #ff0000;
-}
