--- a/src/components/Game/Tile.css
+++ b/src/components/Game/Tile.css
@@ -1,24 +1,45 @@
-.tile {
+.default {
     width: 50px;
     height: 28px;
-    outline-style: solid;
-    outline-color: #ff0000;
+    line-height: 28px;
+
+    outline-color: #000000;
 
 }
 
 .campsite {
-    place-content: center;
     width: 50px;
     height: 50px;
+    line-height: 50px;
     border-radius: 50%;
-    outline-style: solid;
-    outline-color: #ff0000;
+    outline-color: #009696;
 }
 
 .hq {
     width: 50px;
     height: 28px;
+    line-height: 28px;
+
+    outline-color: #8e00d0;
+}
+
+.tile {
+    text-align: center;
+    place-content: center;
+    outline-width: 4.5px;
     outline-style: solid;
-    outline-color: #ff0000;
-    background-color: #ff0000;
+}
+
+.redSide {
+    background: #ffcccb;
+
+}
+
+.blueSide {
+    background: #87ceeb;
+
+} 
+
+.empty {
+    background: #fff;
 }
